created html_message field, populated by message replacing \n with <br>

--- a/email_manager/mails/templates/mails/index.html
+++ b/email_manager/mails/templates/mails/index.html
@@ -1,4 +1,6 @@
 <p>{{msg.sent_date}}</p>
 <p>{{msg.subject}}</p>
 <br>
-<p>{{msg.message}}</p>
+{% autoescape off %}
+<p>{{msg.html_message}}</p>
+{% endautoescape %}
